overflow problem solve

--- a/src/index.css
+++ b/src/index.css
@@ -9,5 +9,5 @@
   --color-para-color: #717171; 
 }
 body{
-   overflow: hidden;
+   overflow-x: hidden;
 }
